5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1635_2447.log
== SUBMITION (2019-04-08 15:52:29) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(pagamento == preco):
	print("Ninguem deve nada")
else:
	if(preco > pagamento):
		print("Falta " + (preco - pagamento))
	else:
		print("Troco de " + (pagamento - preco))
-- EXECUTION TIME:
0.215679
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 8, in <module>
    print("Falta " + (preco - pagamento))
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:53:24) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

#if(pagamento == preco):
	#print("Ninguem deve nada")
#else:
	if(preco > pagamento):
		print("Falta " + (preco - pagamento))
	else:
		print("Troco de " + (pagamento - preco))
-- EXECUTION TIME:
0.119239
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 7
    if(preco > pagamento):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:12:37) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

#if(pagamento == preco):
	#print("Ninguem deve nada")
#else:
	if(preco > pagamento):
		print("Falta " + round(preco - pagamento, 2))
	else:
		print("Troco de " + round(pagamento - preco, 2))
-- EXECUTION TIME:
0.136749
-- ERROR:
  File "/home/codebench/codes/1635/2447/main.py", line 7
    if(preco > pagamento):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:16:14) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(pagamento == preco):
	print("Ninguem deve nada")
else:
	if(preco > pagamento):
		X = round(preco - pagamento, 2)
		print("Falta " + X)
	else:
		Y = round(pagamento - preco, 2)
		print("Troco de " + Y)
-- EXECUTION TIME:
0.140334
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 9, in <module>
    print("Falta " + X)
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:30:15) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(pagamento == preco):
	print("Ninguem deve nada")
else:
	if(preco > pagamento):
		X = round(preco - pagamento, 2)
		print("Falta " + X)
	else:
		Y = round(pagamento - preco, 2)
		print("Troco de " + Y)
-- EXECUTION TIME:
0.122353
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 9, in <module>
    print("Falta " + X)
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:42:06) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(pagamento == preco):
	print("Ninguem deve nada")
else:
	if(preco > pagamento):
		X = round(preco - pagamento, 2)
		print("Falta X " + X)
	else:
		Y = round(pagamento - preco, 2)
		print("Troco de Y " + Y)
-- EXECUTION TIME:
0.129354
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 9, in <module>
    print("Falta X " + X)
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:42:13) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(pagamento == preco):
	print("Ninguem deve nada")
else:
	if(preco > pagamento):
		X = round(preco - pagamento, 2)
		print("Falta X " + X)
	else:
		Y = round(pagamento - preco, 2)
		print("Troco de Y" + Y)
-- EXECUTION TIME:
0.129633
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 9, in <module>
    print("Falta X " + X)
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:42:23) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(pagamento == preco):
	print("Ninguem deve nada")
else:
	if(preco > pagamento):
		X = round(preco - pagamento, 2)
		print("Falta " + X)
	else:
		Y = round(pagamento - preco, 2)
		print("Troco de " + Y)
-- EXECUTION TIME:
0.131401
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 9, in <module>
    print("Falta " + X)
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:45:48) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	X = round(preco - pagamento, 2)
	print("Falta " + X)
else:
	Y = round(pagamento - preco, 2)
	print("Troco de " + Y)
-- EXECUTION TIME:
0.154254
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 6, in <module>
    print("Falta " + X)
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:47:38) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	X = preco - pagamento
	print("Falta " + round(X, 2))
else:
	Y = pagamento - preco
	print("Troco de " + round(X, 2))
-- EXECUTION TIME:
0.144704
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 6, in <module>
    print("Falta " + round(X, 2))
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:48:23) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	X = preco - pagamento
	print("Falta " + str(round(X, 2)))
else:
	Y = pagamento - preco
	print("Troco de " + str(round(X, 2)))
-- EXECUTION TIME:
0.205417
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:50:58) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	X = 3.0
	print("Falta " + round(X, 2))
else:
	Y = 3.0
	print("Troco de " + round(X, 2))
-- EXECUTION TIME:
0.190976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 6, in <module>
    print("Falta " + round(X, 2))
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:53:41) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	X = preco - pagamento
	print("Falta X")
else:
	Y = pagamento - preco
	print("Troco de Y")
-- EXECUTION TIME:
0.189686
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta X
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de Y
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Preco: Pagamento: Troco de Y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:54:27) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	X = preco - pagamento
	print("Falta " + round(X, 2))
else:
	Y = pagamento - preco
	print("Troco de " + round(X, 2))
-- EXECUTION TIME:
0.163977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 6, in <module>
    print("Falta " + round(X, 2))
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:55:39) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	X = preco - pagamento
	print("Falta " + round(X, 2))
else:
	Y = pagamento - preco
	print("Troco de " + round(Y, 2))
-- EXECUTION TIME:
0.17416
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 6, in <module>
    print("Falta " + round(X, 2))
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:56:11) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	print("Falta " + round(preco - pagamento, 2))
else:
	print("Troco de " + round(pagamento - preco, 2))
-- EXECUTION TIME:
0.151379
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 5, in <module>
    print("Falta " + round(preco - pagamento, 2))
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:57:15) 
-- CODE:
preco = round(float(input("Preco: ")), 2)
pagamento = round(float(input("Pagamento: ")), 2)

if(preco > pagamento):
	print("Falta " + round(preco - pagamento, 2))
else:
	print("Troco de " + round(pagamento - preco, 2))
-- EXECUTION TIME:
0.159407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 5, in <module>
    print("Falta " + round(preco - pagamento, 2))
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:52:13) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	print("Falta " + round(preco - pagamento, 2))
else:
	print("Troco de " + round(pagamento - preco, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Falta " + round(preco - pagamento, 2))
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:52:58) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	print("Falta " + str(round(preco - pagamento, 2)))
else:
	print("Troco de " + round(pagamento - preco, 2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:53:23) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	print("Falta " + str(round(preco - pagamento, 2)))
else:
	print("Troco de " + str(round(pagamento - preco, 2)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 21:53:53) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	print("Falta " + str(round(preco - pagamento, 2)))
else:
	print("Troco de " + str(round(pagamento - preco, 2)))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 21:54:09) 
-- CODE:
preco = float(input("Preco: "))
pagamento = float(input("Pagamento: "))

if(preco > pagamento):
	print("Falta " + str(round(preco - pagamento, 2)))
else:
	print("Troco de " + str(round(pagamento - preco, 2)))
-- EXECUTION TIME:
0.178838
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
